<resources>
    <string name="title">Contatos</string>
    <string name="error_without_connection">Não foi possível conecar a internet, por favor, cheque sua conexão e tente novamente.</string>
    <string name="error_default_server">Não foi possível conectar ao servidor, por favor, tente novamente mais tarde</string>
    <string name="retry">Tentar novamente</string>
    <string name="app_name">Promotion</string>
    <string name="welcome_login">Seja bem vindo!</string>
    <string name="welcome_subtitle_login">Realize o login e ganhe descontos em diversos estabelecimentos, não fique fora dessa.</string>
    <string name="edit_text_email">Email</string>
    <string name="edit_text_name">Nome</string>
    <string name="edit_text_password">Senha</string>
    <string name="edit_text_confirm_password">Confrimar senha</string>
    <string name="text_login_title">Login</string>
    <string name="text_remember_passowrd">Lembrar senha</string>
    <string name="text_forgot_password">Esqueceu sua senha?</string>
    <string name="text_enter_login">Entrar</string>
    <string name="text_title_new_register">Registrar-se</string>
    <string name="text_title_signup">Olá</string>
    <string name="text_terms_politic">Ao se registrar você concorda com as \nPolíticas de termos e uso.</string>
    <string name="text_button_new_register">Ainda não tem uma conta? \nRegiste-se aqui</string>
    <string name="text_reset_password_title">Esqueceu sua senha?</string>
    <string name="text_subtitle_reset_password">Ao clicar em enviar e-mail, um e-mail será enviado a você para que possa ser feito o registro de uma nova senha.</string>
    <string name="text_subtitle_reset_password_button">Enviar e-mail</string>
    <string name="welcome_subtitle_reset_password">Esqueceu sua senha? não tem problema, digite seu e-mail que cuidaremos disso para você.</string>
    <string name="welcome_subtitle_register">Faça o cadastro para conhecer o melhor app de promoções que existe, não fique fora dessa.</string>
    <string name="message_email_or_password_empty">Você precisa digitar email e senha para que o login seja realizado.</string>
    <string name="message_email_invalid">Por favor, digite um email válido</string>
    <string name="message_password_invalid">Atenção! Sua senha deve conter 6 dígitos</string>
    <string name="message_empty_biometric">Você ainda não tem uma biometria cadastrada.</string>
    <string name="message_data_empty_register">Você precisa difgitar todas as informações para realizar o cadastro.</string>
    <string name="message_password_is_not_equals">As senhas não coincidem. Por favor digite novamente.</string>
    <string name="success_login">Usuário cadastrado com sucesso, faça o login para continuar</string>
    <string name="success_reset_password">E-mail de recuperação enviado com sucesso.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_title_home">Minhas empresas</string>
</resources>
