<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStartEditText"
            android:layout_marginEnd="@dimen/marginEndEditText"
            android:drawableStart="@drawable/ic_person"
            android:hint="@string/edit_text_name"
            android:layout_marginTop="@dimen/dimen_margin_01"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStartEditText"
            android:layout_marginEnd="@dimen/marginEndEditText"
            android:drawableStart="@drawable/ic_email_vector"
            android:hint="@string/edit_text_email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="@dimen/dimen_margin_01"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_margin_02"
            android:drawableStart="@drawable/ic_padlock"
            android:hint="@string/edit_text_password"
            android:inputType="numberPassword"
            app:layout_constraintLeft_toLeftOf="@id/et_email"
            app:layout_constraintRight_toRightOf="@+id/et_email"
            app:layout_constraintTop_toBottomOf="@id/et_email" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/confirm_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_margin_02"
            android:drawableStart="@drawable/ic_padlock"
            android:hint="@string/edit_text_confirm_password"
            android:inputType="numberPassword"
            app:layout_constraintLeft_toLeftOf="@id/et_email"
            app:layout_constraintRight_toRightOf="@+id/et_email"
            app:layout_constraintTop_toBottomOf="@id/et_password" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStart"
            android:layout_marginEnd="@dimen/marginEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            android:text="@string/text_terms_politic"
            app:layout_constraintTop_toBottomOf="@id/confirm_password"
            android:layout_marginTop="@dimen/dimen_margin_03"
            android:layout_marginBottom="@dimen/dimen_margin_02"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>