<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email"
            style="@style/PrimaryEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStartEditText"
            android:layout_marginEnd="@dimen/marginEndEditText"
            android:background="@drawable/shape_round_borders"
            android:drawableStart="@drawable/ic_email_vector"
            android:hint="@string/edit_text_email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="@dimen/dimen_margin_01"
            android:maxLines="1"
            android:drawablePadding="@dimen/dimen_drawable_padding"
            android:minLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            style="@style/PrimaryEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_margin_02"
            android:background="@drawable/shape_round_borders"
            android:drawableStart="@drawable/ic_padlock"
            android:drawablePadding="@dimen/dimen_drawable_padding"
            android:hint="@string/edit_text_password"
            android:inputType="numberPassword"
            android:maxLines="1"
            android:minLines="1"
            app:layout_constraintLeft_toLeftOf="@id/et_email"
            app:layout_constraintRight_toRightOf="@+id/et_email"
            app:layout_constraintTop_toBottomOf="@id/et_email" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkbox_remember_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_margin_02"
            app:layout_constraintStart_toStartOf="@id/et_password"
            app:layout_constraintTop_toBottomOf="@id/et_password" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_remember_passowrd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStartEditText"
            android:text="@string/text_remember_passowrd"
            android:textColor="@color/grayVector"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/checkbox_remember_password"
            app:layout_constraintStart_toEndOf="@id/checkbox_remember_password"
            app:layout_constraintTop_toTopOf="@id/checkbox_remember_password" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginEndEditText"
            android:text="@string/text_forgot_password"
            android:textColor="@color/grayVector"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/checkbox_remember_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/checkbox_remember_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>