<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_reset_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:layout_marginTop="@dimen/dimen_margin_03"
            android:layout_marginStart="@dimen/marginStart"
            android:layout_marginEnd="@dimen/marginEnd"
            android:text="@string/text_reset_password_title"
            android:textSize="@dimen/text_dimen_02"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/subtitle_reset_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title_reset_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:layout_marginTop="@dimen/dimen_margin_03"
            android:layout_marginStart="@dimen/marginStart"
            android:layout_marginEnd="@dimen/marginEnd"
            android:text="@string/text_subtitle_reset_password"
            android:textSize="@dimen/text_dimen_02"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStartEditText"
            android:layout_marginEnd="@dimen/marginEndEditText"
            android:hint="@string/edit_text_email"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="@dimen/dimen_margin_02"
            android:layout_marginTop="@dimen/dimen_margin_01"
            android:maxLines="1"
            android:drawablePadding="@dimen/dimen_drawable_padding"
            android:minLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subtitle_reset_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>