<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrow_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_constraint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:id="@+id/tb_toolbar_login"
                    android:layout_width="0dp"
                    android:layout_height="250dp"
                    android:background="@drawable/shape_view_toolbar"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/label_welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/marginStart"
                    android:layout_marginTop="100dp"
                    android:gravity="center"
                    android:text="@string/welcome_login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_dimen_04"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.cardview.widget.CardView
                    android:id="@+id/myCradView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp"
                    app:cardUseCompatPadding="true"
                    app:contentPaddingBottom="40dp"
                    app:contentPaddingTop="40dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/label_welcome">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text_login"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/text_login_title"
                        android:textSize="@dimen/text_dimen_02"
                        android:textColor="#9F9C9C"
                        android:layout_marginStart="@dimen/marginStart"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/text_register"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/text_title_new_register"
                        app:layout_constraintStart_toEndOf="@id/text_login"
                        android:textSize="@dimen/text_dimen_02"
                        android:textColor="#9F9C9C"
                        android:layout_marginStart="@dimen/dimen_margin_04"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/view_highlight_login"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        app:layout_constraintTop_toBottomOf="@id/text_login"
                        app:layout_constraintStart_toStartOf="@id/text_login"
                        app:layout_constraintEnd_toEndOf="@id/text_login"/>

                        <View
                            android:id="@+id/view_highlight_register"
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:layout_marginTop="10dp"
                            app:layout_constraintTop_toBottomOf="@id/text_register"
                            app:layout_constraintStart_toStartOf="@id/text_register"
                            app:layout_constraintEnd_toEndOf="@id/text_register"/>

                    <FrameLayout
                        android:id="@+id/container_authentication_fragment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.cardview.widget.CardView>


                <ProgressBar
                    android:id="@+id/pb_load"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:indeterminateDrawable="@drawable/shape_progress_bar"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_margin_02"
            android:layout_marginEnd="@dimen/dimen_margin_02"
            android:layout_marginBottom="@dimen/dimen_margin_03"
            android:background="@drawable/shape_button"
            android:textColor="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Entrar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>